tests/org.eclipse.n4js.bugreports.tests/xt-tests/IDEBUG_0277_ArrayLiteralTypeInference.n4js.xt
/*
 * Copyright (c) 2016 NumberFour AG.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   NumberFour AG - Initial API and implementation
 */

/* XPECT_SETUP org.eclipse.n4js.bugreports.tests.SpecXtTest END_SETUP  */


class A {}

function foo(obj : Array<Object>) {}
function <T> foo2(p : Array<T>) : Array<T> {return null;}

// XPECT noerrors -->
// XPECT type of '[new A()]' --> Array<Object>
foo([new A()]); // error: "Array<A> is not a subtype of Array<Object>."

// XPECT noerrors -->
// XPECT type of '[null]' --> Array<Object>
foo([null]); // error: "Array<null> is not a subtype of Array<Object>."


// but:

// XPECT errors --> "Array<int> is not a subtype of Array<Object>." at "[42]"
foo([42]); // working correctly already



// with nesting:

// XPECT noerrors -->
// XPECT type of '[new A()]' --> Array<Object>
foo(foo2([new A()]));

// XPECT noerrors -->
// XPECT type of '[null]' --> Array<Object>
foo(foo2([null]));
